// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addressBMJsonSchema 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "address1": {
      "type": "string",
    },
    "address2": {
      "type": "string",
    },
    "city": {
      "type": "string",
    },
    "countryCode": {
      "format": "countryCode",
      "type": "string",
    },
    "created": {
      "description": "UnixTimestamp2000",
      "format": "unixTimestamp2000",
      "type": "number",
    },
    "createdAt": {
      "description": "UnixTimestamp2000",
      "format": "unixTimestamp2000",
      "type": "number",
    },
    "createdDate": {
      "description": "IsoDate",
      "format": "isoDate",
      "type": "string",
    },
    "id": {
      "type": "string",
    },
    "phone": {
      "type": "string",
    },
    "region": {
      "type": "string",
    },
    "updated": {
      "description": "UnixTimestamp2000",
      "format": "unixTimestamp2000",
      "type": "number",
    },
    "zip": {
      "maxLength": 40,
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "address1",
    "city",
    "countryCode",
    "created",
    "createdAt",
    "createdDate",
    "id",
    "updated",
    "zip",
  ],
  "type": "object",
}
`;

exports[`addressSchema 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "address1": {
      "type": "string",
    },
    "address2": {
      "type": "string",
    },
    "city": {
      "type": "string",
    },
    "countryCode": {
      "format": "countryCode",
      "type": "string",
    },
    "createdAt": {
      "description": "UnixTimestamp2000",
      "format": "unixTimestamp2000",
      "type": "number",
    },
    "createdDate": {
      "description": "IsoDate",
      "format": "isoDate",
      "type": "string",
    },
    "phone": {
      "type": "string",
    },
    "region": {
      "type": "string",
    },
    "zip": {
      "maxLength": 40,
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "address1",
    "city",
    "countryCode",
    "createdAt",
    "createdDate",
    "zip",
  ],
  "type": "object",
}
`;
